# bec3-artistic

./: .gitignore  README.md
project/: CMakeLists.txt
project/assets/conf/: .gitignore  Bec3.json
project/template/: main.cpp
project/template/include/: Background.hpp  Camera.hpp  Circle.hpp  Engine.hpp  Form.hpp  Graphics.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Sound.hpp  Square.hpp  Texture.hpp  Triangle.hpp  Vertex.hpp
project/template/src/: Background.cpp  Camera.cpp  Circle.cpp  Engine.cpp  Form.cpp  Graphics.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Sound.cpp  Square.cpp  Triangle.cpp
